cmake_minimum_required(VERSION 3.10.0)

project(Computer_Graphics)

# add all assignaments directories to make all targets visible
add_subdirectory(A00)

add_subdirectory(A01)

add_subdirectory(A02)

add_subdirectory(A03)

add_subdirectory(A04)

add_subdirectory(A05)

add_subdirectory(A06)

add_subdirectory(A07)

add_subdirectory(A08)

add_subdirectory(A09)

add_subdirectory(A10)

add_subdirectory(A11)

add_subdirectory(A12)

add_subdirectory(A13)

add_subdirectory(A14)

add_subdirectory(A15)